Added python test run configuration with docker-compose configuration running before it

--- a/lesson2/Fake_DB_two_MS/task-info.yaml
+++ b/lesson2/Fake_DB_two_MS/task-info.yaml
@@ -24,3 +24,5 @@ files:
   visible: true
 - name: gateway/__init__.py
   visible: true
+- name: runConfigurations/task3_test.run.xml
+  visible: false
