--- a/Building the API/CRUD operations on DB 1/task-info.yaml
+++ b/Building the API/CRUD operations on DB 1/task-info.yaml
@@ -1,6 +1,6 @@
 type: edu
 files:
-- name: task.py
+- name: dal.py
   visible: true
 - name: tests/test_task.py
   visible: false
@@ -8,3 +8,5 @@ files:
   visible: false
 - name: tests/__init__.py
   visible: false
+- name: api.py
+  visible: true
