--- a/Deploy API on Docker/Docker Intro/task-info.yaml
+++ b/Deploy API on Docker/Docker Intro/task-info.yaml
@@ -4,3 +4,13 @@ files:
   visible: true
 - name: __init__.py
   visible: false
+- name: img.png
+  visible: true
+- name: img_1.png
+  visible: true
+- name: img_2.png
+  visible: true
+- name: img_3.png
+  visible: true
+- name: img_4.png
+  visible: true
