Dropped jsonify from api, replaced list with dict, added tests for dal through a hidden app (api_test.py) (couldn't test dal directly, g module prevents it from working, requires an app)

--- a/Building the API/CRUD operations on DB 1/task-info.yaml
+++ b/Building the API/CRUD operations on DB 1/task-info.yaml
@@ -10,3 +10,7 @@ files:
   visible: false
 - name: api.py
   visible: true
+- name: tests/api_test.py
+  visible: false
+- name: storage.db.db
+  visible: true
