Dropped jsonify from api, replaced list with dict, added tests for dal through a hidden app (api_test.py) (couldn't test dal directly, g module prevents it from working, requires an app) in CRUD operations on DB 2

--- a/Building the API/CRUD operations on DB 2/task-info.yaml
+++ b/Building the API/CRUD operations on DB 2/task-info.yaml
@@ -2,11 +2,15 @@ type: edu
 files:
 - name: dal.py
   visible: true
-- name: tests/test_task.py
-  visible: false
 - name: __init__.py
   visible: false
+- name: api.py
+  visible: true
 - name: tests/__init__.py
   visible: false
-- name: api.py
+- name: tests/api_test.py
+  visible: false
+- name: tests/test_task.py
+  visible: false
+- name: storage.db.db
   visible: true
