Added answer placeholders to CRUD operations on DB (both), updated api files

--- a/Building the API/CRUD operations on DB 1/task-info.yaml
+++ b/Building the API/CRUD operations on DB 1/task-info.yaml
@@ -2,6 +2,16 @@ type: edu
 files:
 - name: dal.py
   visible: true
+  placeholders:
+  - offset: 409
+    length: 81
+    placeholder_text: '# TODO: populate the dictionary with data from shelf'
+  - offset: 596
+    length: 17
+    placeholder_text: '# TODO: create the database shelf object'
+  - offset: 618
+    length: 24
+    placeholder_text: '# TODO: add the data about the new item from args to the shelf'
 - name: tests/test_task.py
   visible: false
 - name: __init__.py
@@ -12,3 +22,5 @@ files:
   visible: true
 - name: tests/api_test.py
   visible: false
+- name: storage.db.db
+  visible: true
