--- a/Deploy API on Docker/Dockerfile/task-info.yaml
+++ b/Deploy API on Docker/Dockerfile/task-info.yaml
@@ -10,3 +10,5 @@ files:
   visible: true
 - name: dal.py
   visible: true
+- name: runConfigurations/Python tests in test_task.py.run.xml
+  visible: false
