Added text and answer placeholders to Gateway Delete Resource

--- a/Building the Gateway Application/Delete Resource/task-info.yaml
+++ b/Building the Gateway Application/Delete Resource/task-info.yaml
@@ -6,3 +6,24 @@ files:
   visible: false
 - name: tests/__init__.py
   visible: false
+- name: gateway/__init__.py
+  visible: true
+- name: gateway/application.py
+  visible: true
+  placeholders:
+  - offset: 847
+    length: 54
+    placeholder_text: '# TODO'
+  - offset: 960
+    length: 48
+    placeholder_text: '# TODO'
+- name: invsys/__init__.py
+  visible: true
+- name: invsys/api.py
+  visible: true
+- name: invsys/dal.py
+  visible: true
+- name: invsys/Dockerfile
+  visible: true
+- name: invsys/requirements.txt
+  visible: true
