Added text and answer placeholders to Gateway Post Resource, updated code

--- a/Building the Gateway Application/lesson-info.yaml
+++ b/Building the Gateway Application/lesson-info.yaml
@@ -3,5 +3,5 @@ content:
 - Define routes
 - Get Resource
 - Delete Resource
-- Update Resource
+- Post Resource
 - Add a Dockerfile and requirements.txt
