--- a/Composing the System/Docker-compose/task-info.yaml
+++ b/Composing the System/Docker-compose/task-info.yaml
@@ -1,7 +1,5 @@
 type: edu
 files:
-- name: task.py
-  visible: true
 - name: tests/test_task.py
   visible: false
 - name: __init__.py
@@ -17,4 +15,16 @@ files:
 - name: gateway/Dockerfile
   visible: true
 - name: gateway/requirements.txt
+  visible: true
+- name: runConfigurations/docker-compose-test.run.xml
+  visible: false
+- name: invsys/__init__.py
+  visible: true
+- name: invsys/api.py
+  visible: true
+- name: invsys/dal.py
+  visible: true
+- name: invsys/Dockerfile
+  visible: true
+- name: invsys/requirements.txt
   visible: true
