--- a/Building the API/CRUD operations on DB - get device/task-info.yaml
+++ b/Building the API/CRUD operations on DB - get device/task-info.yaml
@@ -9,13 +9,13 @@ files:
   - offset: 857
     length: 17
     placeholder_text: '''Return the device from the database accessed by the id'''
-  - offset: 1065
-    length: 49
+  - offset: 1075
+    length: 51
     placeholder_text: '# TODO: return None if the id is not found in the database'
-  - offset: 1430
-    length: 77
+  - offset: 1455
+    length: 81
     placeholder_text: '# TODO'
-  - offset: 1928
+  - offset: 1981
     length: 21
     placeholder_text: '# TODO: delete the device from the database'
 - name: __init__.py
@@ -28,3 +28,5 @@ files:
   visible: false
 - name: tests/test_task.py
   visible: false
+- name: storage.db.db
+  visible: true
