--- a/Deploy API on Docker/Docker run configuration setup/task-info.yaml
+++ b/Deploy API on Docker/Docker run configuration setup/task-info.yaml
@@ -14,3 +14,5 @@ files:
   visible: false
 - name: config1.png
   visible: false
+- name: runConfigurations/Deploy API on Docker_Docker run configuration setup_Dockerfile.run.xml
+  visible: false
