Gateway Intro -> theory

--- a/Building the Gateway Application/Introduction/task-info.yaml
+++ b/Building the Gateway Application/Introduction/task-info.yaml
@@ -1,10 +1,6 @@
-type: edu
+type: theory
 files:
-- name: tests/test_task.py
-  visible: false
 - name: __init__.py
-  visible: false
-- name: tests/__init__.py
   visible: false
 - name: gateway/application.py
   visible: true
