--- a/Building the Gateway Application/Put Resource/task-info.yaml
+++ b/Building the Gateway Application/Put Resource/task-info.yaml
@@ -1,7 +1,5 @@
 type: edu
 files:
-- name: task.py
-  visible: true
 - name: tests/test_task.py
   visible: false
 - name: __init__.py
@@ -13,8 +11,8 @@ files:
 - name: gateway/application.py
   visible: true
   placeholders:
-  - offset: 1432
-    length: 275
+  - offset: 1428
+    length: 274
     placeholder_text: return 'Hello from PUT'
 - name: invsys/__init__.py
   visible: true
@@ -26,3 +24,11 @@ files:
   visible: true
 - name: invsys/requirements.txt
   visible: true
+- name: gateway/Dockerfile
+  visible: false
+- name: gateway/requirements.txt
+  visible: false
+- name: docker-compose.yaml
+  visible: false
+- name: runConfigurations/Put_Resource_Test.run.xml
+  visible: false
