--- a/Building the Gateway Application/Post Resource/task-info.yaml
+++ b/Building the Gateway Application/Post Resource/task-info.yaml
@@ -13,10 +13,10 @@ files:
 - name: gateway/application.py
   visible: true
   placeholders:
-  - offset: 1169
-    length: 67
+  - offset: 1166
+    length: 66
     placeholder_text: '# TODO: make the post request to invsys'
-  - offset: 1295
+  - offset: 1291
     length: 48
     placeholder_text: '# TODO'
 - name: invsys/__init__.py
@@ -29,5 +29,11 @@ files:
   visible: true
 - name: invsys/requirements.txt
   visible: true
-- name: runConfigurations/Gateway_post_resource_Test.run.xml
+- name: docker-compose.yaml
+  visible: false
+- name: gateway/Dockerfile
+  visible: false
+- name: gateway/requirements.txt
+  visible: false
+- name: runConfigurations/Post_Resource_Test.run.xml
   visible: false
