--- a/Building the Gateway Application/Delete Resource/task-info.yaml
+++ b/Building the Gateway Application/Delete Resource/task-info.yaml
@@ -11,10 +11,10 @@ files:
 - name: gateway/application.py
   visible: true
   placeholders:
-  - offset: 849
-    length: 55
+  - offset: 847
+    length: 54
     placeholder_text: '# TODO'
-  - offset: 963
+  - offset: 960
     length: 48
     placeholder_text: '# TODO'
 - name: invsys/__init__.py
@@ -27,5 +27,11 @@ files:
   visible: true
 - name: invsys/requirements.txt
   visible: true
-- name: runConfigurations/Gateway_delete_resource_test.run.xml
+- name: gateway/Dockerfile
+  visible: false
+- name: gateway/requirements.txt
+  visible: false
+- name: docker-compose.yaml
+  visible: false
+- name: runConfigurations/Delete_Resource_Test.run.xml
   visible: false
