--- a/Composing the System/Deploying without Docker/task-info.yaml
+++ b/Composing the System/Deploying without Docker/task-info.yaml
@@ -8,3 +8,19 @@ files:
   visible: false
 - name: tests/__init__.py
   visible: false
+- name: invsys/storage.db.db
+  visible: true
+- name: gateway/__init__.py
+  visible: true
+- name: gateway/app.py
+  visible: true
+- name: gateway/requirements.txt
+  visible: true
+- name: invsys/__init__.py
+  visible: true
+- name: invsys/app.py
+  visible: true
+- name: invsys/dal.py
+  visible: true
+- name: invsys/requirements.txt
+  visible: true
