--- a/Building the API/API - DeviceInventory Resource/task-info.yaml
+++ b/Building the API/API - DeviceInventory Resource/task-info.yaml
@@ -3,16 +3,16 @@ files:
 - name: api.py
   visible: true
   placeholders:
-  - offset: 2476
-    length: 569
+  - offset: 2637
+    length: 561
     placeholder_text: '# TODO: add four required arguments'
-  - offset: 3156
-    length: 7
-    placeholder_text: '''Return all devices'''
-  - offset: 3194
+  - offset: 3297
+    length: 54
+    placeholder_text: '''a json object with all devices and a response code'''
+  - offset: 3381
     length: 33
-    placeholder_text: '# TODO: parse the request arguments'
-  - offset: 3236
+    placeholder_text: '# TODO: parse request arguments'
+  - offset: 3423
     length: 26
     placeholder_text: '# TODO: add a new device to devices'
 - name: tests/test_task.py
