--- a/Building the API/CRUD operations on DB - delete device/task-info.yaml
+++ b/Building the API/CRUD operations on DB - delete device/task-info.yaml
@@ -6,6 +6,9 @@ files:
   - offset: 1928
     length: 21
     placeholder_text: '# TODO: delete the device from the database'
+  - offset: 1961
+    length: 36
+    placeholder_text: '''message'''
 - name: __init__.py
   visible: false
 - name: api.py
@@ -16,3 +19,5 @@ files:
   visible: false
 - name: tests/test_task.py
   visible: false
+- name: storage.db.db
+  visible: true
