--- a/Introduction/Multi-component application/task-info.yaml
+++ b/Introduction/Multi-component application/task-info.yaml
@@ -1,12 +1,8 @@
-type: edu
+type: theory
 files:
 - name: task.py
   visible: true
-- name: tests/test_task.py
-  visible: false
 - name: __init__.py
-  visible: false
-- name: tests/__init__.py
   visible: false
 - name: technical_flow.png
   visible: false
