fix(full app): added `with pull_db() as shelf:` to all crud functions to avoid resource unavailable error

--- a/lesson2/full_app/docker-compose.yaml
+++ b/lesson2/full_app/docker-compose.yaml
@@ -4,6 +4,8 @@ services:
         build: gateway
         ports:
             - "5001:5001"
+        depends_on:
+            - invsys
     invsys:
         build: invsys
 
