fix(CRUD operations tasks): added `with pull_db() as shelf:` to all crud functions to avoid resource unavailable error

--- a/Building the API/CRUD operations on DB - delete device/task-info.yaml
+++ b/Building the API/CRUD operations on DB - delete device/task-info.yaml
@@ -3,12 +3,12 @@ files:
 - name: dal.py
   visible: true
   placeholders:
-  - offset: 1928
+  - offset: 2066
     length: 21
     placeholder_text: '# TODO: delete the device from the database'
-  - offset: 1961
+  - offset: 2099
     length: 36
-    placeholder_text: '''message'''
+    placeholder_text: '"message"'
 - name: __init__.py
   visible: false
 - name: api.py
@@ -19,5 +19,3 @@ files:
   visible: false
 - name: tests/test_task.py
   visible: false
-- name: storage.db.db
-  visible: true
