--- a/Building the API/CRUD operations on DB - get device/task-info.yaml
+++ b/Building the API/CRUD operations on DB - get device/task-info.yaml
@@ -3,12 +3,12 @@ files:
 - name: dal.py
   visible: true
   placeholders:
-  - offset: 796
-    length: 49
+  - offset: 845
+    length: 53
     placeholder_text: '# TODO: return None if the id is not found in the database'
-  - offset: 857
+  - offset: 914
     length: 17
-    placeholder_text: '''Return the device from the database accessed by the id'''
+    placeholder_text: '"Return the device from the database accessed by the id"'
 - name: __init__.py
   visible: false
 - name: api.py
@@ -19,5 +19,3 @@ files:
   visible: false
 - name: tests/test_task.py
   visible: false
-- name: storage.db.db
-  visible: true
