--- a/Building the Gateway Application/Get Resource/task-info.yaml
+++ b/Building the Gateway Application/Get Resource/task-info.yaml
@@ -3,9 +3,9 @@ files:
 - name: gateway/application.py
   visible: true
   placeholders:
-    - offset: 358
-      length: 62
-      placeholder_text: '# TODO: complete the function'
+  - offset: 358
+    length: 62
+    placeholder_text: '# TODO: complete the function'
 - name: tests/test_task.py
   visible: false
 - name: __init__.py
@@ -31,4 +31,6 @@ files:
 - name: gateway/requirements.txt
   visible: false
 - name: runConfigurations/Get_Resource_Test.run.xml
+  visible: false
+- name: runConfigurations/rm_images.sh
   visible: false
