--- a/Building the Gateway Application/Delete Resource/task-info.yaml
+++ b/Building the Gateway Application/Delete Resource/task-info.yaml
@@ -3,12 +3,12 @@ files:
 - name: gateway/application.py
   visible: true
   placeholders:
-    - offset: 847
-      length: 54
-      placeholder_text: '# TODO'
-    - offset: 960
-      length: 48
-      placeholder_text: '# TODO'
+  - offset: 847
+    length: 54
+    placeholder_text: '# TODO'
+  - offset: 960
+    length: 48
+    placeholder_text: '# TODO'
 - name: tests/test_task.py
   visible: false
 - name: __init__.py
@@ -34,4 +34,6 @@ files:
 - name: docker-compose.yaml
   visible: false
 - name: runConfigurations/Delete_Resource_Test.run.xml
+  visible: false
+- name: runConfigurations/rm_images.sh
   visible: false
