--- a/Building the Gateway Application/Post Resource/task-info.yaml
+++ b/Building the Gateway Application/Post Resource/task-info.yaml
@@ -3,12 +3,12 @@ files:
 - name: gateway/application.py
   visible: true
   placeholders:
-    - offset: 1166
-      length: 66
-      placeholder_text: '# TODO: make the post request to invsys'
-    - offset: 1291
-      length: 48
-      placeholder_text: '# TODO'
+  - offset: 1166
+    length: 66
+    placeholder_text: '# TODO: make the post request to invsys'
+  - offset: 1291
+    length: 48
+    placeholder_text: '# TODO'
 - name: tests/test_task.py
   visible: false
 - name: __init__.py
@@ -34,4 +34,6 @@ files:
 - name: gateway/requirements.txt
   visible: false
 - name: runConfigurations/Post_Resource_Test.run.xml
+  visible: false
+- name: runConfigurations/rm_images.sh
   visible: false
