Fixed tests, added configurations to "Add a Dockerfile and requirements" to remove previous versions of the containers before launching tests

--- a/Building the Gateway Application/Add a Dockerfile and requirements.txt/task-info.yaml
+++ b/Building the Gateway Application/Add a Dockerfile and requirements.txt/task-info.yaml
@@ -24,3 +24,9 @@ files:
   visible: true
 - name: invsys/requirements.txt
   visible: true
+- name: docker-compose.yaml
+  visible: false
+- name: runConfigurations/rm_images.sh
+  visible: false
+- name: runConfigurations/Gateway_add_Dockerfile_Test.run.xml
+  visible: false
