Fixed dal.py in Deploying without Docker, changed task type for this and the next task

--- a/Composing the System/Deploying without Docker/task-info.yaml
+++ b/Composing the System/Deploying without Docker/task-info.yaml
@@ -1,15 +1,9 @@
-type: edu
+type: theory
 files:
 - name: invsys/app.py
   visible: true
-- name: tests/test_task.py
-  visible: false
 - name: __init__.py
   visible: false
-- name: tests/__init__.py
-  visible: false
-- name: invsys/storage.db.db
-  visible: true
 - name: gateway/__init__.py
   visible: true
 - name: gateway/app.py
