--- a/Deploy API on Docker/Postman/task-info.yaml
+++ b/Deploy API on Docker/Postman/task-info.yaml
@@ -10,9 +10,11 @@ files:
   visible: true
 - name: requirements.txt
   visible: true
-- name: runConfigurations/Postman_task_config.run.xml
-  visible: false
 - name: Postman1.png
   visible: false
 - name: Postman2.png
+  visible: false
+- name: runConfigurations/rm_images.sh
+  visible: false
+- name: runConfigurations/Postm_task_config.run.xml
   visible: false
