--- a/Building the Gateway Application/Post Resource/task-info.yaml
+++ b/Building the Gateway Application/Post Resource/task-info.yaml
@@ -5,12 +5,10 @@ files:
   placeholders:
   - offset: 1166
     length: 66
-    placeholder_text: '# TODO: make the post request to invsys'
+    placeholder_text: "# TODO: make the post request to invsys"
   - offset: 1291
     length: 48
     placeholder_text: '# TODO'
-- name: tests/test_task.py
-  visible: false
 - name: __init__.py
   visible: false
 - name: tests/__init__.py
@@ -33,7 +31,13 @@ files:
   visible: false
 - name: gateway/requirements.txt
   visible: false
+- name: runConfigurations/Post_Resource_Compose.run.xml
+  visible: false
+- name: tests/test_task.py
+  visible: false
 - name: runConfigurations/Post_Resource_Test.run.xml
   visible: false
-- name: runConfigurations/rm_images.sh
+- name: utils/runConfigurations/setup_containers.run.xml
   visible: false
+- name: tests/setup_containers.py
+  visible: true
