--- a/Building the Gateway Application/Get Resource/task-info.yaml
+++ b/Building the Gateway Application/Get Resource/task-info.yaml
@@ -1,13 +1,5 @@
 type: edu
 files:
-- name: gateway/application.py
-  visible: true
-  placeholders:
-  - offset: 358
-    length: 62
-    placeholder_text: '# TODO: complete the function'
-- name: tests/test_task.py
-  visible: false
 - name: __init__.py
   visible: true
 - name: tests/__init__.py
@@ -15,10 +7,6 @@ files:
 - name: gateway/__init__.py
   visible: true
 - name: invsys/__init__.py
-  visible: true
-- name: invsys/api.py
-  visible: true
-- name: invsys/dal.py
   visible: true
 - name: invsys/Dockerfile
   visible: true
@@ -30,7 +18,19 @@ files:
   visible: false
 - name: gateway/requirements.txt
   visible: false
+- name: tests/test_task.py
+  visible: false
+- name: gateway/application.py
+  visible: true
+  placeholders:
+  - offset: 358
+    length: 62
+    placeholder_text: "# TODO: complete the function"
 - name: runConfigurations/Get_Resource_Test.run.xml
   visible: false
+- name: invsys/dal.py
+  visible: true
+- name: invsys/api.py
+  visible: true
 - name: runConfigurations/rm_images.sh
   visible: false
