Updated tests and config files in "Add Dockerfile and requirements" for the new test infrastructure

--- a/Building the Gateway Application/Add a Dockerfile and requirements.txt/task-info.yaml
+++ b/Building the Gateway Application/Add a Dockerfile and requirements.txt/task-info.yaml
@@ -26,7 +26,7 @@ files:
   visible: true
 - name: docker-compose.yaml
   visible: false
-- name: runConfigurations/rm_images.sh
-  visible: false
 - name: runConfigurations/Gateway_add_Dockerfile_Test.run.xml
+  visible: false
+- name: runConfigurations/Add_Dockerfile_requirements_Compose.run.xml
   visible: false
